platform_versioned_docs/version-4.8.0/configure/platform-configs/overview.mdx
---
title: "Overview of Platform Configs"
sidebar_label: "Overview"
sidebar_position: 1
---

import VClusterProConfig from "../../api/_partials/resources/config/status_reference.mdx";
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="least-privilege-mode" />


# Overview
<!-- vale off -->
Platform configs are the content in the [`values.yaml`](../introduction.mdx) under the `config` section. It controls the behavior of the vCluster Platform after it is installed on the host
cluster. You can also configure the content in vCluster Platform UI via **Admin > Config**.

## UI vs `config` section
After the deployment, the behavior of the platform can be configured by the `config` section of the `values.yaml` or **Admin > Config** in vCluster Platform UI.
<!-- vale on -->

When using `values.yaml`, you should add the configuration under the `config` section of the `vcluster-platform` chart's `values.yaml`. 
For example:
```yaml
config:
  vault:
    enabled: true
```
However, when using vCluster Platform UI, you can directly only add the configuration content.
```yaml
vault:
  enabled: true
```

## Reference
The complete list of platform configuration fields is as follows:
<VClusterProConfig />