platform_versioned_docs/version-4.12.0/configure/platform-configs/overview.mdx
---
title: "Overview of Platform Configs"
sidebar_label: "Overview"
sidebar_position: 1
---

import VClusterProConfig from "../../api/_partials/resources/config/status_reference.mdx";
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="least-privilege-mode" />


# Overview
<!-- vale off -->
Platform configs are the content in the [`values.yaml`](../introduction.mdx) under the `config` section. It controls the behavior of the vCluster Platform after it is installed on the host
cluster. You can also configure the content in vCluster Platform UI via **Admin > Config**.

## UI vs `config` section
After the deployment, the behavior of the platform can be configured by the `config` section of the `values.yaml` or **Admin > Config** in vCluster Platform UI.
<!-- vale on -->

When using `values.yaml`, you should add the configuration under the `config` section of the `vcluster-platform` chart's `values.yaml`. 
For example:
```yaml
config:
  vault:
    enabled: true
```
However, when using vCluster Platform UI, you can directly only add the configuration content.
```yaml
vault:
  enabled: true
```

## Manage sensitive information {#managing-sensitive-information}

Many configuration options require sensitive information such as API keys or tokens. Rather than storing these directly in your `values.yaml` file, use environment variable placeholders.

### Use secret references {#using-secret-references}

Store sensitive values in a Kubernetes secret and reference it in your configuration using `envValueFrom`:

```yaml title="Store sensitive values using Kubernetes secrets"
# Secret references
envValueFrom:
  CLIENT_ID:
    secretKeyRef:
      name: github-auth-secret
      key: client_id
  CLIENT_SECRET:
    secretKeyRef:
      name: github-auth-secret
      key: client_secret

# Platform configuration
config:
  auth:
    github:
      clientId: $CLIENT_ID
      clientSecret: $CLIENT_SECRET
      redirectURI: https://my-platform.example.com/auth/github/callback
```

## Configure custom HTTP headers {#custom-http-headers}

You can configure the platform to add custom HTTP headers to all API responses. This is useful for security-related headers or when integrating with specific environments.

```yaml title="Adding custom HTTP headers"
config:
  auth:
    customHttpHeaders:
      X-Frame-Options: SAMEORIGIN
      X-XSS-Protection: 1; mode=block
      Content-Security-Policy: default-src 'self'
```

## Reference
The complete list of platform configuration fields is as follows:
<VClusterProConfig />